# Ur5_motion_and_Lego_Detection

./: .gitmodules  README.md
doc/html/: SpawnaLego_8py.html  annotated.html  classes.html  dir_000006_000004.html  dir_070b2969c86006a4b5ac6c83cf11562d.html  dir_070b2969c86006a4b5ac6c83cf11562d_dep.map  dir_0958be62eef502d1af614e26b90a575b.html  dir_0d227129ad640675d5815a5974a94002.html  dir_1b0ee70902fbe73b25dc01479a5387b3.html  dir_298fa78133ec4468b2c01e53e4fdebd6.html  dir_298fa78133ec4468b2c01e53e4fdebd6_dep.map  dir_2cbcd3fe16358ab9333b853094dbec9d.html  files.html  functions.html  (+59 more)
publisher_pkg/: CMakeLists.txt  package.xml
publisher_pkg/doc/: manifest.yaml
publisher_pkg/doc/html/: annotated.html  classes.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8d6bdac06577371e2480521870576620.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  kinematics_8cpp.html  kinematics_8cpp__incl.map  kinematics_8cpp__incl.md5  kinematics_8cpp_source.html  kinematics_8h.html  kinematics_8h__dep__incl.map  kinematics_8h__dep__incl.md5  kinematics_8h__incl.map  kinematics_8h__incl.md5  kinematics_8h_source.html  mainpage_8h.html  mainpage_8h_source.html  menudata.js  motion__planning_8cpp.html  motion__planning_8cpp__incl.map  motion__planning_8cpp__incl.md5  motion__planning_8cpp_source.html  motion__planning_8h.html  motion__planning_8h__dep__incl.map  motion__planning_8h__dep__incl.md5  motion__planning_8h__incl.map  motion__planning_8h__incl.md5  motion__planning_8h_source.html  (+14 more)
publisher_pkg/include/publisher_pkg/: kinematics.h  motion_planning.h  publisher_node.h
publisher_pkg/msg/: legoDetection.msg  legoGroup1.msg
publisher_pkg/src/: kinematics.cpp  motion_planning.cpp  publisher_node.cpp
spawnLego_pkg/: CMakeLists.txt  package.xml
spawnLego_pkg/models/X1-Y1-Z2/: model.sdf
spawnLego_pkg/models/X1-Y3-Z2/: model.sdf
spawnLego_pkg/models/X1-Y4-Z1/: model.sdf
spawnLego_pkg/models/X1-Y4-Z2/: model.sdf
spawnLego_pkg/src/: SpawnaLego.py  prova.py
vision/: old_vision.py  params.py  vision.py  vision_test.py
(+118 files in other folders)
